--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -32,7 +32,8 @@ li:before
 
 /* line 22, C:/Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
-  line-height: 1;
+ 	line-height: 1;
+	height: 100%;
 }
 
 /* line 24, C:/Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
@@ -81,11 +82,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 28, ../sass/screen.scss */
 body {
-  color: #FFF;
-  background-color: #000000;
-  /*background-image: url(../background.png);*/
-  background-size: 100% auto;
-  background-position: center;
+  	color: #FFF;
+	height: 100%;
+	background-color: #000;
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #000000),
+		color-stop(0.5, #2E2E2E),
+		color-stop(1, #000000)
+	);
+	background-image: -o-linear-gradient(bottom, #000000 0%, #2E2E2E 50%, #000000 100%);
+	background-image: -moz-linear-gradient(bottom, #000000 0%, #2E2E2E 50%, #000000 100%);
+	background-image: -webkit-linear-gradient(bottom, #000000 0%, #2E2E2E 50%, #000000 100%);
+	background-image: -ms-linear-gradient(bottom, #000000 0%, #2E2E2E 50%, #000000 100%);
+	background-image: linear-gradient(to bottom, #000000 0%, #2E2E2E 50%, #000000 100%);
+	background-repeat: no-repeat;
 }
 
 a,
@@ -94,7 +107,7 @@ a:visited
 	color: #FFF;
 	text-decoration: none;
 }
-	
+
 #languageBar
 {
 	position: absolute;
@@ -128,10 +141,32 @@ a:visited
 #menu a:visited {text-decoration: none; -webkit-text-stroke: 1px black; }
 #menu a:active {text-decoration: none}
 
+#header_background {
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-size: auto 100%;
+	background-position: left;
+	height: 275px;
+	width: 100%;
+	position: absolute;
+}
+
+#header_album {
+	top: 150px;
+	height: 125px;
+	width: 100%;
+	position: absolute;
+}
+
+#header_album img {
+	width: 350px;
+	float: right;	
+}
+
 /* line 42, ../sass/screen.scss */
 #menu_line {
   position: absolute;
-  top: 175px;
+  top: 255px;
   width: 100%;
   height: 40px;
   background-color: #ff4200;
@@ -144,7 +179,7 @@ a:visited
   position: absolute;
   left: 0px;
   right: 0px;
-  top: 20px;
+  top: 100px;
   margin: auto;
   width: 275px;
   height: 275px;
@@ -175,11 +210,22 @@ a:visited
 }
 
 /* line 88, ../sass/screen.scss */
-#logo {
+#logo
+{
   position: absolute;
-  left: 50px;
-  top: 50px;
-  width: 175px;
+  left: 25px;
+  top: 25px;	
+}
+
+#vinyl {
+  width: 225px;
+}
+
+#sublogo {
+  position: absolute;
+  left: 30px;
+  top: 30px;
+  width: 165px;
 }
 
 /* line 97, ../sass/screen.scss */
@@ -948,7 +994,7 @@ div.graph div.sound2_bar {
 #content
 {
 	position: absolute;
-	top: 460px;
+	top: 525px;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
@@ -998,4 +1044,35 @@ div.graph div.sound2_bar {
 	background: url('../images/loading.gif') #FFFFFF;
 	border-radius: 15px;
 	border: 5px solid #000;
+}
+
+section
+{
+	margin-bottom: 30px;
+}
+
+.news_title
+{
+ 	-webkit-font-smoothing: antialiased;
+ 	-webkit-backface-visibility: hidden;
+	text-shadow: 3px 3px 0 #000, -1px -1px 0 #000,   1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.news_title+hr
+{
+	margin-top: -26px;
+	margin-bottom: 26px;
+	margin-left: -25px;
+	background: #ff4200;
+	height: 4px;
+	border: 0px;
+}
+
+.news_bullet, .news_bullet img 
+{
+	margin-top: 23.5px;
+	margin-bottom: -23.5px;
+	margin-left: -28px;	
+	height: 50px;
+	width: 50px;	
 }
